close #1 add FabManager

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
                         </a>
                     </li>
                     <li class="platform">
+                        <a href="//www.fab-manager.com/index_english.html" class="link" target="_blank">
+                            <div class="title">FabManager</div>
+                            <div class="url">fab-manager.com/index_english.html</div>
+                        </a>
+                    </li>
+                    <li class="platform">
                         <a href="//github.com" class="link" target="_blank">
                             <div class="title">GitHub</div>
                             <div class="url">github.com</div>
@@ -86,5 +92,5 @@
             <a href="https://www.youtube.com/watch?v=PNr1yBIgQCY" class="link" title="See full video on YouTube" target="_blank">BGV: 'Making Living Sharing - a FabLab world tour documentary' by Jens Dyvik</a>
         </div>
     </div>
-</body>    
+</body>
 </html>
